--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,10 @@
     <script src="https://unpkg.com/react@16.4.1/umd/react.development.js"></script>
     <!-- unpkg is a cdn for modules that are on npm; script tag lets you bring in files from npm packages -->
 
-    <script src="https://unpkg.com/react-dom@16.4.1/umd/react-dom.development.js"></script>
-
-    <script>
-        const App = () => {
-            return React.createElement("div", {},
-                React.createElement('h1', {}, 'Adopt Me!')
-            )
-        }
-
-        ReactDOM.render(React.createElement(App),  document.getElementById('root'))
+    <script 
+    src="https://unpkg.com/react-dom@16.4.1/umd/react-dom.development.js">
     </script>
+
+    <script src="app.js"></script>
 </body>
 </html>
